Edit nav and architecture

--- a/src/contents/hello-world.mdx
+++ b/src/contents/hello-world.mdx
@@ -1,4 +1,4 @@
-<div className='space-y-4 bg-card xl:bg-background xl:shadow-none p-4 lg:px-12 xl:px-32 2xl:px-48 2xl:py-8 2xl:space-y-8 shadow-2xl'>
+<div className='space-y-4 bg-background xl:shadow-none p-4 lg:px-12 xl:px-32 2xl:px-48 2xl:space-y-8 shadow-2xl'>
 
 <div className="flex justify-center">
   <img
@@ -11,7 +11,7 @@
   />
 </div>
 
-<h1 className="text-center">I am a <span className="text-primary animate-pulse">fancy text _</span></h1>
+<FancyText />
 
 I am building my website from scratch with Nextjs, TailwindCSS and MDX... and it looks good.
 
@@ -21,7 +21,7 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis corrupti fu
   link="/portfolio"
   text="Voir mes projets et compétences"
   textBtn="Portfolio"
-  className="my-8"
+  className="mt-8 mb-16"
 />
 
 ## Subheading
@@ -32,6 +32,13 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis corrupti fu
 
 Am I another p tag ?
 
+<DemoCta
+  link="/services"
+  text="Voir mes services et tarifs"
+  textBtn="Services & Tarifs"
+  className="mt-8 mb-16"
+/>
+
 ## Subheading
 
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis corrupti fugit, ab, nisi molestias et, facilis accusamus modi laudantium minima consectetur totam dolore ducimus unde? Non alias repellendus aspernatur veritatis quo dicta modi quos iusto quae autem soluta totam, tempore est. Sapiente, id perspiciatis ad eum nobis earum maxime laborum incidunt consequuntur, blanditiis corrupti ea! Suscipit quasi, optio eum labore delectus voluptatum quia eveniet perferendis repudiandae officiis cumque aliquid sint odit molestias corporis temporibus ut laborum saepe atque unde deleniti praesentium. Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis corrupti fugit, ab, nisi molestias et, facilis accusamus modi laudantium minima consectetur totam dolore ducimus unde? Non alias repellendus aspernatur veritatis quo dicta modi quos iusto quae autem soluta totam, tempore est. Sapiente, id perspiciatis ad eum nobis earum maxime laborum incidunt consequuntur, blanditiis corrupti ea! Suscipit quasi, optio eum labore delectus voluptatum quia eveniet perferendis repudiandae officiis cumque aliquid sint odit molestias corporis temporibus ut laborum saepe atque unde deleniti praesentium.
@@ -39,7 +46,7 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis corrupti fu
 <DemoCta
   link="/blog"
   text="Je partage aussi des idées et des expériences sur mon blog"
-  textBtn="Blog"
+  textBtn="Explorer mon blog"
   isBlank="true"
   className="my-8"
 />
