fancy-text and custom button

--- a/src/contents/hello-world.mdx
+++ b/src/contents/hello-world.mdx
@@ -21,8 +21,7 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis corrupti fu
   link="/portfolio"
   text="Voir mes projets et compétences"
   textBtn="Portfolio"
-  className="mt-8 mb-16"
-/>
+  className="mt-8 mb-16" />
 
 ## Subheading
 
@@ -48,9 +47,6 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis corrupti fu
   text="Je partage aussi des idées et des expériences sur mon blog"
   textBtn="Explorer mon blog"
   isBlank="true"
-  className="my-8"
-/>
-
-<p className="text-sm text-blue-400-foreground italic">Updated by <span className="text-indigo-500">Shinra</span> - 01/01/26</p>
+  className="my-8" />
 
 </div>
