add lights footer and faq, edit header

--- a/src/contents/hello-world.mdx
+++ b/src/contents/hello-world.mdx
@@ -1,5 +1,6 @@
-<div className='space-y-4 bg-background xl:shadow-none p-4 lg:px-12 xl:px-32 2xl:px-48 2xl:space-y-8 shadow-2xl'>
+<div className='space-y-4 bg-transparent xl:shadow-none p-4 lg:px-12 xl:px-32 2xl:px-48 2xl:space-y-8 shadow-2xl'>
 
+<header className='lg:py-4'>
 <div className="flex justify-center">
   <img
     src="/assets/avatar.jpg"
@@ -13,7 +14,9 @@
 
 <FancyText />
 
-I am building my website from scratch with Nextjs, TailwindCSS and MDX... and it looks good.
+</header>
+
+**Identité visuelle, site web, application mobile, hébergement, mainenance ou encore administration et gestion de communauté**, je vous propose un accompagnement personnalisé dans les étapes clés de vos projets web.
 
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis corrupti fugit, ab, nisi molestias et, facilis accusamus modi laudantium minima consectetur totam dolore ducimus unde? Non alias repellendus aspernatur veritatis quo dicta modi quos iusto quae autem soluta totam, tempore est. Sapiente, id perspiciatis ad eum nobis earum maxime laborum incidunt consequuntur, blanditiis corrupti ea! Suscipit quasi, optio eum labore delectus voluptatum quia eveniet perferendis repudiandae officiis cumque aliquid sint odit molestias corporis temporibus ut laborum saepe atque unde deleniti praesentium. Quibusdam iste distinctio magnam. Ipsum accusamus sequi architecto doloribus similique iste, dolorum, temporibus esse cum fugiat quas et ad.
 
