refactor and add contact form

--- a/src/contents/hello-world.mdx
+++ b/src/contents/hello-world.mdx
@@ -1,20 +1,4 @@
-<div className='space-y-4 bg-transparent xl:shadow-none p-4 lg:px-12 xl:px-32 2xl:px-48 2xl:space-y-8 shadow-2xl'>
-
-<header className='lg:py-4'>
-<div className="flex justify-center">
-  <img
-    src="/assets/avatar.jpg"
-    alt="Avatar"
-    width={150}
-    height={150}
-    className="rounded-full drop-shadow-lg"
-    draggable="false"
-  />
-</div>
-
-<FancyText />
-
-</header>
+<div className='bg-transparent xl:shadow-none p-4 lg:px-12 xl:px-32 2xl:px-48 shadow-2xl'>
 
 **Identité visuelle, site web, application mobile, hébergement, mainenance ou encore administration et gestion de communauté**, je vous propose un accompagnement personnalisé dans les étapes clés de vos projets web.
 
